# FastBDT

./: .gitlab-ci.yml  CMakeLists.txt  README.md  setup.py.in
PyFastBDT/: FastBDT.py  __init__.py.in  utility.py
examples/: CPPExample.cc  IRISExample.cxx  PythonExample.py  generic_example.py  iris.csv  iris_example.py
examples/legacy/: README.md
include/: FastBDT.h.in  FastBDT_C_API.h
src/: Classifier.cxx  FastBDT.cxx  FastBDT_C_API.cxx  FastBDT_IO.cxx  test_Classifier.cxx  test_FastBDT.cxx  test_FastBDT_C_API.cxx  test_FastBDT_IO.cxx  test_Performance.cxx  test_all.cxx
